--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -3,3 +3,6 @@ goText = "Go"
 goExternalText = "Go to site"
 membershipBanner = "30 years of Metro Olografix! | Membership 2025"
 boardText = "Board"
+activitiesAndProject = "Activities and projects"
+allActivities = "All activities"
+allProjects = "All projects"
