--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -3,3 +3,6 @@ goText = "Vai"
 goExternalText = "Vai al sito"
 membershipBanner = "30 anni di Metro Olografix! | Tesseramento 2025"
 boardText = "Direttivo"
+activitiesAndProject = "Attività e progetti"
+allActivities = "Tutte le attività"
+allProjects = "Tutti i progetti"
