--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -6,3 +6,5 @@ boardText = "Board"
 activitiesAndProject = "Activities and projects"
 allActivities = "All activities"
 allProjects = "All projects"
+poweredByHugo = "powered by"
+oldWebsite = "old website"
