--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -6,3 +6,5 @@ boardText = "Direttivo"
 activitiesAndProject = "Attività e progetti"
 allActivities = "Tutte le attività"
 allProjects = "Tutti i progetti"
+poweredByHugo = "fatto con"
+oldWebsite = "vecchio sito"
