--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -8,3 +8,8 @@ allActivities = "All activities"
 allProjects = "All projects"
 poweredByHugo = "powered by"
 oldWebsite = "old website"
+hqStatusLoading = "loading..."
+hqStatusOpen = "Open"
+hqStatusClose = "Closed"
+hqDescription = "<p>Come and visit us in our new headquarters in <strong>Viale Marconi 278/1</strong>, Pescara. We meet every Monday evening from 21:00.</p>"
+hqGotoMap = "Map"
