--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -8,3 +8,8 @@ allActivities = "Tutte le attività"
 allProjects = "Tutti i progetti"
 poweredByHugo = "fatto con"
 oldWebsite = "vecchio sito"
+hqStatusLoading = "caricamento..."
+hqStatusOpen = "Aperta"
+hqStatusClose = "Chiusa"
+hqDescription = "<p>Vieni a trovarci nella nostra nuova sede in <strong>Viale Marconi 278/1</strong>, Pescara. Ci riuniamo ogni lunedì sera dalle 21:00.</p>"
+hqGotoMap = "Mappa"
