--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -11,5 +11,5 @@ oldWebsite = "vecchio sito"
 hqStatusLoading = "caricamento..."
 hqStatusOpen = "Aperta"
 hqStatusClose = "Chiusa"
-hqDescription = "<p>Vieni a trovarci nella nostra nuova sede in <strong>Viale Marconi 278/1</strong>, Pescara. Ci riuniamo ogni lunedì sera dalle 21:00.</p>"
+hqDescription = "<p>Vieni a trovarci nella nostra nuova sede in <strong>Viale Marconi 278/1</strong>, Pescara.</p><p>Ci riuniamo ogni lunedì sera dalle 21:00.</p>"
 hqGotoMap = "Mappa"
