--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -6,8 +6,8 @@ boardText = "Board"
 activitiesAndProject = "Activities and projects"
 allActivities = "All activities"
 allProjects = "All projects"
-poweredByHugo = "powered by"
-oldWebsite = "old website"
+poweredByHugo = "Powered by"
+oldWebsite = "Old website"
 hqStatusLoading = "loading..."
 hqStatusOpen = "Open"
 hqStatusClose = "Closed"
