--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -6,8 +6,8 @@ boardText = "Direttivo"
 activitiesAndProject = "Attività e progetti"
 allActivities = "Tutte le attività"
 allProjects = "Tutti i progetti"
-poweredByHugo = "fatto con"
-oldWebsite = "vecchio sito"
+poweredByHugo = "Fatto con"
+oldWebsite = "Vecchio sito"
 hqStatusLoading = "caricamento..."
 hqStatusOpen = "Aperta"
 hqStatusClose = "Chiusa"
