divise colonne attivita e progetti in home

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -4,6 +4,8 @@ goExternalText = "Go to site"
 membershipBanner = "30 years of Metro Olografix! | Membership 2025"
 boardText = "Board"
 activitiesAndProject = "Activities and projects"
+activitiesHeader = "Activities"
+projectsHeader = "Projects"
 allActivities = "All activities"
 allProjects = "All projects"
 poweredByHugo = "Powered by"
