--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -4,6 +4,8 @@ goExternalText = "Vai al sito"
 membershipBanner = "30 anni di Metro Olografix! | Tesseramento 2025"
 boardText = "Direttivo"
 activitiesAndProject = "Attività e progetti"
+activitiesHeader = "Attività"
+projectsHeader = "Progetti"
 allActivities = "Tutte le attività"
 allProjects = "Tutti i progetti"
 poweredByHugo = "Fatto con"
