--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -15,3 +15,12 @@ hqStatusOpen = "Aperta"
 hqStatusClose = "Chiusa"
 hqDescription = "<p>Vieni a trovarci nella nostra nuova sede in <strong>Viale Marconi 278/1</strong>, Pescara.</p><p>Ci riuniamo ogni lunedì sera dalle 21:00.</p>"
 hqGotoMap = "Mappa"
+nextUpcomingEvent = "Prossimo Evento"
+
+dateLabel = "Data"
+recurrenceLabel = "Ricorrenza"
+locationLabel = "Luogo"
+visitEventSite = "Visita il sito dell'evento"
+moreInfo = "Maggiori informazioni"
+upcomingEvents = "Prossimi Eventi"
+pastEvents = "Eventi Passati"
