--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -4,6 +4,8 @@ goExternalText = "Go to site"
 membershipBanner = "30 years of Metro Olografix! | Membership 2025"
 boardText = "Board"
 activitiesAndProject = "Activities and projects"
+activitiesHeader = "Activities"
+projectsHeader = "Projects"
 allActivities = "All activities"
 allProjects = "All projects"
 poweredByHugo = "Powered by"
@@ -13,3 +15,12 @@ hqStatusOpen = "Open"
 hqStatusClose = "Closed"
 hqDescription = "<p>Come and visit us in our new headquarters in <strong>Viale Marconi 278/1</strong>, Pescara.</p><p>We meet every Monday evening from 21:00.</p>"
 hqGotoMap = "Map"
+nextUpcomingEvent = "Next Upcoming Event"
+
+dateLabel = "Date"
+recurrenceLabel = "Recurrence"
+locationLabel = "Location"
+visitEventSite = "Visit event website"
+moreInfo = "More information"
+upcomingEvents = "Upcoming Events"
+pastEvents = "Past Events"
