fix: eventi ricorrenti

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -24,3 +24,8 @@ visitEventSite = "Visit event website"
 moreInfo = "More information"
 upcomingEvents = "Upcoming Events"
 pastEvents = "Past Events"
+
+today = "Today"
+tomorrow = "Tomorrow"
+next = "Next:"
+calculating = "Calculating next date..."
