aggiunta generazione ics da Hugo, aggiunto banner per sottoscrizione al calendario, rimosso script python per ics non più utilizzato

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -29,3 +29,10 @@ today = "Today"
 tomorrow = "Tomorrow"
 next = "Next:"
 calculating = "Calculating next date..."
+
+subscribeToCalendar = "Subscribe to Calendar"
+calendarDescription = "Add our events to your calendar app"
+downloadCalendar = "Download"
+subscribeDirectly = "Subscribe"
+copyUrl = "Copy URL"
+copiedText = "Copied!"
