--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -29,3 +29,10 @@ today = "Hoy"
 tomorrow = "Mañana"
 next = "Próximo:"
 calculating = "Calculando la próxima fecha..."
+
+subscribeToCalendar = "Suscríbete al Calendario"
+calendarDescription = "Añade nuestros eventos a tu app de calendario"
+downloadCalendar = "Descargar"
+subscribeDirectly = "Suscribirse"
+copyUrl = "Copiar URL"
+copiedText = "¡Copiado!"
