aggiunto suggerimento per utenti android

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -36,3 +36,4 @@ downloadCalendar = "Download"
 subscribeDirectly = "Subscribe"
 copyUrl = "Copy URL"
 copiedText = "Copied!"
+androidSuggestion = "Android user? You may need an external app, like Fossify Calendar, to subscribe to calendars."
