--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -36,3 +36,4 @@ downloadCalendar = "Descargar"
 subscribeDirectly = "Suscribirse"
 copyUrl = "Copiar URL"
 copiedText = "¡Copiado!"
+androidSuggestion = "¿Usuario de Android? Es posible que necesites una aplicación externa, como Fossify Calendar, para suscribirte a calendarios."
