--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -36,3 +36,4 @@ downloadCalendar = "Scarica"
 subscribeDirectly = "Iscriviti"
 copyUrl = "Copia URL"
 copiedText = "Copiato!"
+androidSuggestion = "Utilizzi Android? Potresti aver bisogno di un'app esterna, come Fossify Calendar, per iscriverti ai calendari."
