feat: calendario remoto (#38)
* aggiunta generazione ics da Hugo, aggiunto banner per sottoscrizione al calendario, rimosso script python per ics non più utilizzato

* review ux pistacchio

* aggiunto suggerimento per utenti android

--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -29,3 +29,11 @@ today = "Hoy"
 tomorrow = "Mañana"
 next = "Próximo:"
 calculating = "Calculando la próxima fecha..."
+
+subscribeToCalendar = "Suscríbete al Calendario"
+calendarDescription = "Añade nuestros eventos a tu app de calendario"
+downloadCalendar = "Descargar"
+subscribeDirectly = "Suscribirse"
+copyUrl = "Copiar URL"
+copiedText = "¡Copiado!"
+androidSuggestion = "¿Usuario de Android? Es posible que necesites una aplicación externa, como Fossify Calendar, para suscribirte a calendarios."
