--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -29,3 +29,11 @@ today = "Today"
 tomorrow = "Tomorrow"
 next = "Next:"
 calculating = "Calculating next date..."
+
+subscribeToCalendar = "Subscribe to Calendar"
+calendarDescription = "Add our events to your calendar app"
+downloadCalendar = "Download"
+subscribeDirectly = "Subscribe"
+copyUrl = "Copy URL"
+copiedText = "Copied!"
+androidSuggestion = "Android user? You may need an external app, like Fossify Calendar, to subscribe to calendars."
