--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -29,3 +29,11 @@ today = "Oggi"
 tomorrow = "Domani"
 next = "Prossimo:"
 calculating = "Calcolando la prossima data..."
+
+subscribeToCalendar = "Iscriviti al Calendario"
+calendarDescription = "Aggiungi i nostri eventi alla tua app calendario"
+downloadCalendar = "Scarica"
+subscribeDirectly = "Iscriviti"
+copyUrl = "Copia URL"
+copiedText = "Copiato!"
+androidSuggestion = "Utilizzi Android? Potresti aver bisogno di un'app esterna, come Fossify Calendar, per iscriverti ai calendari."
