chore(golang): evento terminato, fix date ricorrenti

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -29,6 +29,7 @@ today = "Today"
 tomorrow = "Tomorrow"
 next = "Next:"
 calculating = "Calculating next date..."
+eventEnded = "This recurring event has ended."
 
 subscribeToCalendar = "Subscribe to Calendar"
 calendarDescription = "Add our events to your calendar app"
