--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -46,3 +46,10 @@ role_consigliere = "Miembro del Consejo"
 
 partitaIva = "Número de IVA"
 codiceFiscale = "Código Fiscal"
+
+shopHeader = "¡Visita Nuestra Tienda!"
+shopPileTitle = "Polar Olografix de Marca"
+shopPileDescription = "¡Apoya a Olografix con nuestros productos exclusivos!<br /><strong>Promos especiales:</strong><ul><li>Bundle Polar + Camiseta Moca a <strong>35€</strong></li><li>Bundle Polar + Camiseta MX 30 años a <strong>35€</strong></li></ul>"
+visitShop = "Visitar Tienda"
+pileFrontAlt = "Polar Olografix - Frente"
+pileBackAlt = "Polar Olografix - Atrás"
