fix: prossimamente non tradotto

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -53,3 +53,5 @@ shopPileDescription = "Support Olografix with our exclusive merchandise!<br /><s
 visitShop = "Visit Shop"
 pileFrontAlt = "Olografix Fleece - Front"
 pileBackAlt = "Olografix Fleece - Back"
+
+comingEvent = "Soon"
