--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -53,3 +53,5 @@ shopPileDescription = "¡Apoya a Olografix con nuestros productos exclusivos!<br
 visitShop = "Visitar Tienda"
 pileFrontAlt = "Polar Olografix - Frente"
 pileBackAlt = "Polar Olografix - Atrás"
+
+comingEvent = "Próximamente"
