--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -53,3 +53,5 @@ shopPileDescription = "Sostieni Metro Olografix con il nostro merchandising escl
 visitShop = "Vai allo Shop"
 pileFrontAlt = "Pile Olografix - Fronte"
 pileBackAlt = "Pile Olografix - Retro"
+
+comingEvent = "Prossimamente"
