--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -13,8 +13,9 @@ oldWebsite = "Old website"
 hqStatusLoading = "loading..."
 hqStatusOpen = "Open"
 hqStatusClose = "Closed"
-hqDescription = "<p>Come and visit us in our new headquarters in <strong>Viale Marconi 278/1</strong>, Pescara.</p><p>We meet every Monday evening from 21:00.</p>"
+hqDescription = "<p>Come and visit us in our new space in <strong>Viale Marconi 278/1</strong>, Pescara.</p><p>We meet every Monday evening from 21:00.</p>"
 hqGotoMap = "Map"
+visitSpace = "Come visit!"
 nextUpcomingEvent = "Next Upcoming Event"
 
 dateLabel = "Date"
