--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -15,6 +15,7 @@ hqStatusOpen = "Aperta"
 hqStatusClose = "Chiusa"
 hqDescription = "<p>Vieni a trovarci nella nostra nuova sede in <strong>Viale Marconi 278/1</strong>, Pescara.</p><p>Ci riuniamo ogni lunedì sera dalle 21:00.</p>"
 hqGotoMap = "Mappa"
+visitSpace = "Vieni a trovarci!"
 nextUpcomingEvent = "Prossimo Evento"
 
 dateLabel = "Data"
